# cpp-matching-engine-v2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: ProjectStyleGuide.md
include/: Order.hpp  Side.hpp  TimeInForce.hpp
include/Core/: MemoryPool.hpp
include/Types/: Order.hpp  RestingLifetime.hpp  RestingOrder.hpp  RestingOrderPolicy.hpp  TimeInForce.hpp
include/lob/: Aliases.hpp  DayOrderPruneResult.hpp  ExecutionResults.hpp  IncomingOrder.hpp  OrderBook.hpp  OrderRequests.hpp  OrderType.hpp  Requests.hpp  Results.hpp  Side.hpp  SubmissionResults.hpp  TimeInForce.hpp
include/orderbook/: Aliases.hpp  IncomingOrder.hpp  OrderBook.hpp  OrderType.hpp
src/: CMakeLists.txt  MemoryPool.cpp  Orderbook.cpp
src/core/: CMakeLists.txt  ExecutionResults.hpp  InternalExecutionResults.hpp  LevelPruneResult.hpp  MemoryPool.cpp  MemoryPool.hpp  PriceLevel.cpp  PriceLevel.hpp  RestingLifetime.hpp  RestingOrder.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  MemoryPoolTests.cpp  OBCancelOrderTests.cpp  OBMixedOperationsTests.cpp  OBModifyOrderTests.cpp  OBSessionEndTests.cpp  OBSubmitLimitOrderFOKTests.cpp  OBSubmitLimitOrderIOCTests.cpp  OBSubmitLimitOrderRestingTests.cpp  OBSubmitLimitOrderTests.cpp  OBSubmitMarketOrderTests.cpp  PriceLevelTests.cpp
